fix(core): update shadow tokens
- update shadow tokens
- fix dark theme border contrast
- fix overflow shadow cutoff bug

--- a/src/css/module.layout.css
+++ b/src/css/module.layout.css
@@ -6,8 +6,6 @@
   display: flex;
   margin: 0;
   min-height: 0;
-  overflow: hidden;
-  /* width: 100%; */
 
   /* Horizontal Layout */
   &[nve-layout~='row'] {
